# mmwave_control

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.MD  README.md  clear_ipynb.sh  main.py  matlab_cmap.py  phase_correct.ipynb  pyproject.toml  requirements.txt  rma.ipynb  start_frame.ipynb  start_frame2.ipynb  start_frame_handshake.ipynb
fmc4030/: __init__.py  bracket.py  fmc4030.py  fmc4030lib.py  mmw_bracket.py  util.py
fmc4030/fmc4030_lib/win/x64/: FMC4030-Dll.h
fmc4030/lib/ubuntu/x64/: FMC4030-Dll.h
mmwave/: __init__.py  config.py  mmwave.py  mmwcas.pyi  repack.py  rma.py  schemas.py  util.py
mmwave/fmc4030/: __init__.py  bracket.py  fmc4030.py  util.py
mmwave/fmc4030/lib/ubuntu/x64/: FMC4030-Dll.h
mmwave/fmc4030/lib/win/x64/: FMC4030-Dll.lib
