[project]
name = "mmwave-control"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "scipy>=1.14.1",
    "matplotlib>=3.9.3",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
    "tomli-w>=1.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipympl>=0.9.4", "nbconvert>=7.16.6"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { "mmwave" = [
    "*.pyi",
    "*.so",
    "**/*.a",
    "**/*.h",
    "**/*.so",
    "**/*.lib",
    "**/*.dll",
] } # 包含所有类型和二进制文件 
[tool.uv]
constraint-dependencies = ["llvm>0.43.0"]
compile-bytecode = true

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
ignore = ["F401"]
